# oc

./: .test-status.json  AGENTS.md  Cargo.toml  README.md  VISION.md
.github/workflows/: ci.yml
docs/: CNAME  SKILL.md  index.html
scripts/: check-version-bump.py  fake-opencode  preview-fixture.sh  test-fixture.sh
src/: app.rs  cli.rs  commands.rs  config.rs  directory_identity.rs  lib.rs  list_output.rs  main.rs  opencode_db.rs  service.rs  session.rs  session_list.rs  storage.rs  tmux.rs
src/storage/: mod.rs  schema.rs  session_store.rs
src/tui/: app.rs  command.rs  filter.rs  format.rs  input.rs  mod.rs  model.rs  render.rs  selection.rs  state.rs  types.rs
src/tui/render/: layout.rs  mod.rs  model.rs  theme.rs
tests/: alias_cli.rs  attach_and_listing_cli.rs  dashboard_tui.rs  db_path_cli.rs  gatekeeper.rs  harness_foundation.rs  migration_and_memory.rs  session_cli.rs  tui_logic.rs  version_smoke.rs
tests/common/: mod.rs
