[package]
name = "oc"
version = "0.1.2"
edition = "2024"
description = "Interactive TUI session manager for OpenCode"
license = "MIT"
repository = "https://github.com/maxeonyx/oc"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rand = "0.8"
