[package]
name = "oc"
version = "0.3.11"
edition = "2024"
description = "Interactive TUI session manager for OpenCode"
license = "MIT"
repository = "https://github.com/maxeonyx/oc"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
palette = "0.7"
ratatui = "0.29"
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1"
terminal-colorsaurus = "1.0.3"
unicode-width = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rand = "0.8"
